--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,8 +15,8 @@ jobs:
     steps:
         -uses: actions/checkout@v2
         -name: Staring Node js ${{matrix.node-version}}
-        users: actions/setup-node@v1
-        with:
+         uses: actions/setup-node@v1
+         with:
             node-version: ${{matrix.node-version}}
         -name: install modules
          run: npm install
