Try Fixing github actions

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,22 +1,17 @@
-name: linting, testing, building
-on:
-    push:
-        branches: [master]
-    pull_request:
-        branches: [master]
+name: GitHub Actions Demo
+run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
+on: [push]
 jobs:
-    pipeline:
+    Explore-GitHub-Actions:
         runs-on: ubuntu-latest
-        strategy:
-            matrix:
-                node-version: [17.x]
-
         steps:
-            - uses: actions/checkout@v2
-            - name: Staring Node.js ${{ matrix.node-version }}
-              uses: actions/setup-node@v1
+            - name: Checkout
+              uses: actions/checkout@v3
+            - name: Setup node
+              uses: actions/setup-node@v3
               with:
-                  node-version: ${{ matrix.node-version }}
+                  node-version: 17.x
+                  cache: npm
             - name: install modules
               run: npm install
             - name: build production project
@@ -27,5 +22,3 @@ jobs:
               run: npm run lint:scss
             - name: unit testing
               run: npm run test:unit
-            - name: build storybook
-              run: npm run storybook:build
