--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,7 +13,7 @@ jobs:
                   node-version: 17.x
                   cache: npm
             - name: install modules
-              run: npm install
+              run: npm install --legacy-peer-deps
             - name: build production project
               run: npm run build:prod
             - name: linting typescript
