--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
     "test:ui": "npx loki test",
     "test:ui:ok": "npx loki test approve",
-    "test:ui:ci": "concurrently --kill-others --raw --success first && npm run storybook && npm run test:ui",
+    "test:ui:ci": "npx loki --requireReference --reactUri file:./storybook-static",
     "test:unit": "jest --config ./config/jest/jest.config.ts",
     "storybook:build": "storybook build -c ./config/storybook",
     "storybook": "storybook dev -p 6006 -c ./config/storybook --no-open"
