--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "test:ui": "npx loki test",
     "test:ui:ok": "npx loki test approve",
     "test:ui:ci": "npx loki --requireReference --reactUri file:./storybook-static",
+    "test:ui:report": "npm run test:ui:json && nopm run test:ui:html",
+    "test:ui:json": "node scripts/generate-visual-json-report.js",
+    "test:ui:html": "npx reg-cli --from .loki/report.json --report .loki/report.html",
     "test:unit": "jest --config ./config/jest/jest.config.ts",
     "storybook:build": "storybook build -c ./config/storybook",
     "storybook": "storybook dev -p 6006 -c ./config/storybook --no-open"
