--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "test:ui:html": "npx reg-cli --from .loki/report.json --report .loki/report.html",
     "test:unit": "jest --config ./config/jest/jest.config.ts",
     "storybook:build": "storybook build -c ./config/storybook",
-    "storybook": "storybook dev -p 6006 -c ./config/storybook --no-open"
+    "storybook": "storybook dev -p 6006 -c ./config/storybook --no-open",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -68,7 +69,7 @@
     "eslint-plugin-storybook": "^0.6.13",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
-    "husky": "^7.0.0",
+    "husky": "^8.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
     "json-server": "^0.17.0",
