--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,7 +1,12 @@
 {
   "extends": "stylelint-config-standard-scss",
   "rules": {
-    "indentation": [4],
+    "indentation": [
+      4
+    ],
     "selector-class-pattern": null
-  }
+  },
+  "plugins": [
+    "stylelint-scss"
+  ]
 }
