--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack serve --env port=3000",
+    "dev": "concurrently \"npm run start\" \"npm run server\"",
+    "start": "webpack serve --env port=3000",
     "server": "node ./json-server/index.js",
     "build:prod": "webpack  --env mode=production",
     "build:dev": "webpack  --env mode=development",
@@ -20,8 +21,9 @@
     "test:ui:html": "npx reg-cli --from .loki/report.json --report .loki/report.html",
     "test:unit": "jest --config ./config/jest/jest.config.ts",
     "storybook:build": "storybook build -c ./config/storybook",
-    "storybook": "storybook dev -p 6006 -c ./config/storybook --no-open",
-    "prepare": "husky install"
+    "storybook": "storybook dev -p 6006 -c ./config/storybook",
+    "prepare": "husky install",
+    "build-storybook": "storybook build"
   },
   "keywords": [],
   "author": "",
@@ -31,17 +33,18 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
-    "@storybook/addon-actions": "^7.2.0-alpha.0",
-    "@storybook/addon-essentials": "^7.2.0-alpha.0",
-    "@storybook/addon-interactions": "^7.2.0-alpha.0",
-    "@storybook/addon-links": "^7.2.0-alpha.0",
-    "@storybook/addon-mdx-gfm": "^7.2.0-alpha.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
+    "@storybook/addon-actions": "^7.2.3",
+    "@storybook/addon-essentials": "^7.2.3",
+    "@storybook/addon-interactions": "^7.2.3",
+    "@storybook/addon-links": "^7.2.3",
     "@storybook/addon-onboarding": "^1.0.8",
-    "@storybook/blocks": "^7.2.0-alpha.0",
-    "@storybook/react": "^7.2.0-alpha.0",
-    "@storybook/react-webpack5": "^7.2.0-alpha.0",
-    "@storybook/testing-library": "^0.2.1-next.0",
+    "@storybook/blocks": "^7.2.3",
+    "@storybook/builder-webpack5": "^7.2.3",
+    "@storybook/manager-webpack5": "^6.5.16",
+    "@storybook/react": "^7.2.3",
+    "@storybook/react-webpack5": "^7.2.3",
+    "@storybook/testing-library": "^0.2.0",
     "@svgr/webpack": "^6.2.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
@@ -57,8 +60,6 @@
     "@typescript-eslint/parser": "^5.12.1",
     "babel-loader": "^8.2.3",
     "babel-plugin-i18next-extract": "^0.8.3",
-    "copy-webpack-plugin": "^10.2.4",
-    "cors": "^2.8.5",
     "css-loader": "^6.6.0",
     "eslint": "^8.10.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -70,26 +71,27 @@
     "eslint-plugin-storybook": "^0.6.13",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
-    "husky": "^8.0.0",
+    "husky": "^7.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
     "json-server": "^0.17.0",
-    "loki": "^0.32.0",
+    "loki": "^0.28.1",
     "mini-css-extract-plugin": "^2.5.3",
     "postcss": "^8.4.27",
-    "react-refresh": "^0.12.0",
+    "postcss-lit": "^1.1.0",
+    "react-refresh": "^0.14.0",
     "reg-cli": "^0.17.6",
     "regenerator-runtime": "^0.13.9",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
-    "storybook": "^7.2.0-alpha.0",
+    "storybook": "^7.2.3",
     "style-loader": "^3.3.1",
-    "stylelint": "^14.5.3",
+    "stylelint": "^14.16.1",
     "stylelint-config-standard-scss": "^3.0.0",
+    "stylelint-scss": "^5.1.0",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5",
-    "typescript-plugin-css-modules": "^5.0.1",
     "webpack": "^5.69.1",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2",
@@ -98,7 +100,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.0",
     "axios": "^0.26.1",
-    "concurrently": "^7.0.0",
+    "concurrently": "^8.2.0",
     "i18next": "^21.6.11",
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-http-backend": "^1.3.2",
@@ -111,14 +113,12 @@
   "loki": {
     "configurations": {
       "chrome.laptop": {
-        "target": "chrome.app",
+        "target": "chrome.docker",
         "width": 1366,
-        "height": 768,
-        "deviceScaleFactor": 1,
-        "mobile": false
+        "height": 768
       },
       "chrome.iphone7": {
-        "target": "chrome.app",
+        "target": "chrome.docker",
         "preset": "iPhone 7"
       }
     }
