--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,5 +40,9 @@
       "module": "CommonJS"
     }
   },
-  
+  "include": [
+    "./config/jest/setupTests.ts",
+    "./src/**/*.ts",
+    "./src/**/*.tsx",
+  ]
 }
