--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,4 +12,5 @@
 		"source.fixAll.stylelint": true
   },
   "git.postCommitCommand": "push",
+  "react-i18n.i18nPaths": "public\\locales,src\\shared\\config\\i18n",
 }
