--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,15 @@
     "printWidth": 80,
     "singleQuote": true,
     "trailingComma": "all",
-    "tabWidth": 4
+    "tabWidth": 4,
+    "importOrder": [
+        "^react(.*)",
+        "pages/(.*)",
+        "widgets/(.*)",
+        "features/(.*)",
+        "entities/(.*)",
+        "shared/(.*)",
+        "^[./]"
+    ],
+    "importOrderSeparation": true
 }
