--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@svgr/webpack": "^6.2.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
+    "@trivago/prettier-plugin-sort-imports": "^4.2.0",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
