--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "concurrently \"npm run start\" \"npm run server\"",
     "start": "webpack serve --env port=3000",
     "server": "node ./json-server/index.js",
+    "precommit": "npm run lint:ts && npm run lint:scss && npm run test:unit",
     "build:prod": "webpack  --env mode=production",
     "build:dev": "webpack  --env mode=development",
     "lint:ts": "eslint \"**/*.{ts,tsx}\"",
